--- a/main/static/styles/index.less
+++ b/main/static/styles/index.less
@@ -47,183 +47,7 @@
 
 /*#endregion Переменные*/
 
-/*#region Обнуление*/
-* {
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-*, *:before, *:after {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  box-sizing: border-box;
-  content: none;
-}
-
-/*#endregion Обнуление*/
-
-/*#region Header*/
-
-header {
-  width: 100%;
-  background: @black;
-
-  @media @largeDesktops {
-    height: @headerHeight;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-  }
-
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
-    height: @headerHeight;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-  }
-
-  @media @smallDesktopsMin and @smallDesktopsMax {
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  @media @landscapePhonesMin and @landscapePhonesMax {
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  @media @landscapePhonesSmaller {
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-  }
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-
-  @media @largeDesktops {
-    margin-left: @logoLeftMargin;
-  }
-
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
-    margin-left: @logoLeftMargin;
-  }
-
-  @media @smallDesktopsMin and @smallDesktopsMax {
-    margin-top: @logoTopMargin;
-  }
-
-  @media @landscapePhonesMin and @landscapePhonesMax {
-    margin-top: @logoTopMargin;
-  }
-
-  @media @landscapePhonesSmaller {
-    margin-top: @logoTopMargin;
-  }
-}
-
-.logo img {
-  @media @largeDesktops {
-    width: @logoLargeWidth;
-  }
-
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
-    width: @logoLargeWidth;
-  }
-
-  @media @smallDesktopsMin and @smallDesktopsMax {
-    width: @logoLargeWidth;
-  }
-
-  @media @landscapePhonesMin and @landscapePhonesMax {
-    width: @logoLargeWidth;
-  }
-
-  @media @landscapePhonesSmaller {
-    width: @logoSmallWidth;
-  }
-}
-
-.buttons-list {
-  list-style-type: none;
-  color: @white;
-  font-family: @ubuntu;
-  font-size: @headerButtonFontSize;
-
-  @media @largeDesktops {
-    display: flex;
-    flex-direction: row;
-    margin-right: @headerButtonsRightMargin;
-    align-items: center;
-  }
-
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
-    display: flex;
-    flex-direction: row;
-    margin-right: @headerButtonsRightMargin;
-    align-items: center;
-  }
-
-  @media @smallDesktopsMin and @smallDesktopsMax {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: @logoTopMargin 0;
-  }
-
-  @media @landscapePhonesMin and @landscapePhonesMax {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: @logoTopMargin 0;
-  }
-
-  @media @landscapePhonesSmaller {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: @logoTopMargin 0;
-  }
-}
-
-.buttons-list a:not(:first-child) {
-  @media @largeDesktops {
-    margin-left: @headerButtonsHorizontalMargin;
-  }
-
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
-    margin-left: @headerButtonsHorizontalMargin;
-  }
-
-  @media @smallDesktopsMin and @smallDesktopsMax {
-    margin-top: @headerButtonsVerticalMargin;
-  }
-
-  @media @landscapePhonesMin and @landscapePhonesMax {
-    margin-top: @headerButtonsVerticalMargin;
-  }
-
-  @media @landscapePhonesSmaller {
-    margin-top: @headerButtonsVerticalMargin;
-  }
-}
+/*#region Основная информация*/
 
 .info {
   width: 100%;
@@ -234,10 +58,6 @@ header {
   align-items: center;
   justify-content: center;
 }
-
-/*#endregion Header*/
-
-/*#region Основная информация*/
 
 .studio_name, .bdsmr_hashtag {
   color: @white;
@@ -377,7 +197,7 @@ header {
   justify-content: space-between;
   align-items: center;
   font-family: @roboto;
-  background: @black;
+  background: @globalBackground;
 
   @media @largeDesktops {
     padding: 0 150px;
@@ -538,7 +358,7 @@ header {
 /*#region Работы наших мастеров*/
 
 .masters_work {
-  background: @black;
+  background: @globalBackground;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -619,7 +439,7 @@ header {
 /*#region Наша команда*/
 
 .team {
-  background: @black;
+  background: @globalBackground;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -771,7 +591,7 @@ header {
 /*#region Скидки и акции*/
 
 .discounts {
-  background: @black;
+  background: @globalBackground;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -857,7 +677,7 @@ header {
 /*#region О нашем салоне*/
 
 .about {
-  background: @black;
+  background: @globalBackground;
   display: flex;
   flex-direction: column;
   justify-content: center;
