--- a/master/templates/master/html/master.html
+++ b/master/templates/master/html/master.html
@@ -22,71 +22,47 @@
 {% endblock %}
 
 {% block content %}
-    <header class="header">
-        <a class="logo" href="#">
-            <img src="../static/source/common/logo.png" alt="Логотип">
-        </a>
+    <div class="introduce"
+         style="background: url(../static/source/introduce/{{ master.avatar }});
+                 background-size: cover;">
+        <span class="name">Мастер {{ master.name }}</span>
+        <span class="portfolio">ПОРТФОЛИО</span>
+    </div>
 
-        <ul class="buttons-list">
-            <a href="#">
-                <li>О НАС</li>
-            </a>
-            <a href="#">
-                <li>УСЛУГИ</li>
-            </a>
-            <a href="#">
-                <li>КОМАНДА</li>
-            </a>
-            <a href="#">
-                <li>ПОРТФОЛИО</li>
-            </a>
-            <a href="#">
-                <li>FAQs</li>
-            </a>
-        </ul>
-    </header>
-
-    <main class="main">
-        <div class="introduce"
-             style="background: url(../static/source/introduce/{{ master.avatar }});
-                     background-size: cover;">
-            <span class="name">Мастер {{ master.name }}</span>
-            <span class="portfolio">ПОРТФОЛИО</span>
-        </div>
-
-        <div class="portfolio_blocks">
-            <div class="first_block">
-                <div class="description">
-                    <div class="spans">
+    <div class="portfolio_blocks">
+        <div class="first_block">
+            <div class="description">
+                <div class="spans">
                         <span class="description_header">
                             {{ master.status|linebreaksbr }}
                         </span>
-                        <span class="description_body">
+                    <span class="description_body">
                             {{ master.portfolio|linebreaksbr }}
                         </span>
-                    </div>
-
-                    <button class="book_session_button">ЗАПИСАТЬСЯ НА СЕАНС</button>
                 </div>
 
-                <img src="../static/source/photo_block/{{ portfolio_files.0.filename }}">
+                <button class="book_session_button">ЗАПИСАТЬСЯ НА СЕАНС</button>
             </div>
 
-            <div class="second_block">
-                {% for file in portfolio_files|slice:"1:3" %}
-                    <div>
-                        <img src="../static/source/photo_block/{{ file.filename }}">
-                    </div>
-                {% endfor %}
-            </div>
-
-            <div class="third_block">
-                {% for file in portfolio_files|slice:"3:9" %}
-                    <div>
-                        <img src="../static/source/photo_block/{{ file.filename }}">
-                    </div>
-                {% endfor %}
-            </div>
+            <img src="../static/source/photo_block/{{ portfolio_files.0.filename }}">
         </div>
-    </main>
+
+        <div class="second_block">
+            {% for file in portfolio_files|slice:"1:3" %}
+                <div>
+                    <img src="../static/source/photo_block/{{ file.filename }}">
+                </div>
+            {% endfor %}
+        </div>
+
+        <div class="third_block">
+            {% for file in portfolio_files|slice:"3:9" %}
+                <div>
+                    <img src="../static/source/photo_block/{{ file.filename }}">
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <script src="../static/js/base.js"></script>
 {% endblock %}
