--- a/master/static/styles/master.less
+++ b/master/static/styles/master.less
@@ -197,6 +197,7 @@
   background: @masterDescription;
   font-family: @ubuntu;
   color: @white;
+  padding: 10px 90px;
 
   @media @largeDesktops {
     font-size: 32px;
@@ -215,19 +216,20 @@
 
   @media @landscapePhonesMin and @landscapePhonesMax {
     justify-content: space-around;
-    font-size: 16px;
+    font-size: 24px;
   }
 
   @media @landscapePhonesSmaller {
     justify-content: space-around;
-    font-size: 16px;
+    font-size: 24px;
   }
 }
 
 .spans {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
+  align-self: flex-start;
 
   @media @mediumDesktopsMin and @mediumDesktopsMax {
     text-align: center;
@@ -249,6 +251,11 @@
 .description_header {
   margin-bottom: 50px;
   font-weight: 700;
+}
+
+.description_body {
+  line-height: 43px; /* 107.5% */
+  letter-spacing: 0.838px;
 }
 
 .book_session_button {
@@ -280,6 +287,108 @@
   @media @landscapePhonesSmaller {
     font-size: 16px;
   }
+}
+
+/* Скрыть модальное окно по умолчанию */
+.modal {
+  display: none; /* Скрываем модальное окно по умолчанию */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Полупрозрачный серый фон */
+}
+
+/* Стиль для контента модального окна */
+.modal-content {
+  background-color: @globalBackground;
+  margin: auto; /* Центрирование по горизонтали */
+  padding: 37px;
+  max-width: 100%;
+  border: 1px solid @buttonOutline;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%; /* Центрирование по вертикали */
+  left: 50%; /* Центрирование по горизонтали */
+  transform: translate(-50%, -50%); /* Смещение на половину ширины и высоты элемента */
+  font-family: @ubuntu;
+  white-space: nowrap; /* Запрет переноса строк внутри контейнера */
+}
+
+@media @landscapePhonesMin and @landscapePhonesMax {
+  .modal-content {
+    white-space: normal;
+  }
+}
+
+@media @landscapePhonesSmaller {
+  .modal-content {
+    white-space: normal;
+  }
+}
+
+/* Кнопка для закрытия модального окна */
+.close {
+  position: absolute;
+  top: 2%;
+  right: 3%;
+  font-size: 28px;
+  font-weight: bold;
+  color: @buttonOutline;
+  cursor: pointer;
+}
+
+/* Стиль для тела модального окна */
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.modal-body h3 {
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.modal-body span {
+  font-size: 22px;
+}
+
+.modal-body span:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+/* Анимация для появления модального окна */
+@keyframes fadeInModal {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Анимация для закрытия модального окна */
+@keyframes fadeOutModal {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+/* Плавное появление модального окна */
+.modal.fade-in {
+  animation: fadeInModal 0.3s;
+}
+
+/* Плавное закрытие модального окна */
+.modal.fade-out {
+  animation: fadeOutModal 0.3s;
 }
 
 /* endregion Первый блок */
