book a session done. seems like ready to deploy

--- a/main/templates/main/html/index.html
+++ b/main/templates/main/html/index.html
@@ -141,11 +141,11 @@
                 </a>
             </div>
             <div id="master5">
-                <a href="/master/julia">
+                <a href="/master/natalia">
                     <img src="static/source/masters/random3.png">
 
                     <div class="caption">
-                        <span class="master_name">Еще кто-то</span>
+                        <span class="master_name">Наталья</span>
                         <span class="portfolio">ПОСМОТРЕТЬ ПОРТФОЛИО</span>
                     </div>
                 </a>
