base html hotfix

--- a/main/templates/main/html/base.html
+++ b/main/templates/main/html/base.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <a class="logo" href="/">
-            <img src="../static/source/common/logo.png" alt="Логотип">
+            <img src="static/source/common/logo.png" alt="Логотип">
         </a>
 
         <ul class="buttons-list">
