small hotfix index

--- a/main/templates/main/html/index.html
+++ b/main/templates/main/html/index.html
@@ -29,7 +29,7 @@
 
         <span class="bdsmr_hashtag">#BDSMr</span>
         <span class="tattoo_studio">Тату салон в Самаре</span>
-        <a href="https://yandex.ru/maps/-/CTgbE~d"><span class="address">5-я просека, 129</span></a>
+        <a href="https://yandex.ru/maps/-/CTgbE~d" target="_blank"><span class="address">5-я просека, 129</span></a>
         <span class="phone">
                 <a href="tel:+79270171661">+7 (927) 017-16-61</a>
             </span>
@@ -189,7 +189,7 @@
                         </span>
 
                     <div class="vk">
-                        <a href="https://vk.com/bdsmr">
+                        <a href="https://vk.com/bdsmr" target="_blank">
                             <svg width="95" height="95" viewBox="0 0 95 95" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <g id="icons8-&#208;&#178;&#208;&#186;&#208;&#190;&#208;&#189;&#209;&#130;&#208;&#176;&#208;&#186;&#209;&#130;&#208;&#181;-144 2">
@@ -214,7 +214,7 @@
                     <span class="leave_feedback">Оставьте отзыв, чтобы получить скидку 15% на следующий сеанс</span>
 
                     <div class="maps">
-                        <a class="two_gis" href="https://vk.com/bdsmr">
+                        <a class="two_gis" href="https://go.2gis.com/uydaet" target="_blank">
                             <svg width="151" height="50" viewBox="0 0 171 64" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <g id="_2310502456944">
@@ -238,7 +238,7 @@
                             </svg>
                         </a>
 
-                        <a class="yandex" href="https://vk.com/bdsmr">
+                        <a class="yandex" href="https://yandex.ru/maps/-/CTgbE~d" target="_blank">
                             <svg width="57" height="55" viewBox="0 0 57 57" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <g id="Yandex_Maps_icon 1" clip-path="url(#clip0_223_109)">
