--- a/main/static/styles/base.css
+++ b/main/static/styles/base.css
@@ -63,11 +63,11 @@ header {
 }
 @media (min-width: 980px) and (max-width: 1199px) {
   header {
-    height: 75px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
   }
 }
 @media (min-width: 769px) and (max-width: 979px) {
@@ -143,7 +143,7 @@ header {
 }
 @media (min-width: 640px) and (max-width: 768px) {
   .logo img {
-    width: 210px;
+    width: 150px;
   }
 }
 @media (max-width: 639px) {
@@ -168,9 +168,9 @@ header {
 @media (min-width: 980px) and (max-width: 1199px) {
   .buttons-list {
     display: flex;
-    flex-direction: row;
-    margin-right: 78px;
+    flex-direction: column;
     align-items: center;
+    margin: 25px 0;
   }
 }
 @media (min-width: 769px) and (max-width: 979px) {
@@ -204,7 +204,7 @@ header {
 }
 @media (min-width: 980px) and (max-width: 1199px) {
   .buttons-list a:not(:first-child) {
-    margin-left: 45px;
+    margin-top: 45px;
   }
 }
 @media (min-width: 769px) and (max-width: 979px) {
