--- a/main/static/styles/base.less
+++ b/main/static/styles/base.less
@@ -113,11 +113,11 @@ header {
   }
 
   @media @mediumDesktopsMin and @mediumDesktopsMax {
-    height: @headerHeight;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
   }
 
   @media @smallDesktopsMin and @smallDesktopsMax {
@@ -184,7 +184,7 @@ header {
   }
 
   @media @landscapePhonesMin and @landscapePhonesMax {
-    width: @logoLargeWidth;
+    width: @logoSmallWidth;
   }
 
   @media @landscapePhonesSmaller {
@@ -207,9 +207,9 @@ header {
 
   @media @mediumDesktopsMin and @mediumDesktopsMax {
     display: flex;
-    flex-direction: row;
-    margin-right: @headerButtonsRightMargin;
+    flex-direction: column;
     align-items: center;
+    margin: @logoTopMargin 0;
   }
 
   @media @smallDesktopsMin and @smallDesktopsMax {
@@ -240,7 +240,7 @@ header {
   }
 
   @media @mediumDesktopsMin and @mediumDesktopsMax {
-    margin-left: @headerButtonsHorizontalMargin;
+    margin-top: @headerButtonsVerticalMargin;
   }
 
   @media @smallDesktopsMin and @smallDesktopsMax {
