--- a/main/static/styles/base.less
+++ b/main/static/styles/base.less
@@ -154,7 +154,7 @@ header {
   }
 
   @media @mediumDesktopsMin and @mediumDesktopsMax {
-    margin-left: @logoLeftMargin;
+    margin-top: @logoTopMargin;
   }
 
   @media @smallDesktopsMin and @smallDesktopsMax {
@@ -176,11 +176,11 @@ header {
   }
 
   @media @mediumDesktopsMin and @mediumDesktopsMax {
-    width: @logoLargeWidth;
+    width: @logoSmallWidth;
   }
 
   @media @smallDesktopsMin and @smallDesktopsMax {
-    width: @logoLargeWidth;
+    width: @logoSmallWidth;
   }
 
   @media @landscapePhonesMin and @landscapePhonesMax {
