--- a/main/templates/main/html/base.html
+++ b/main/templates/main/html/base.html
@@ -5,6 +5,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>{% block title %} {% endblock %}</title>
 
     {% block links %} {% endblock %}
