--- a/main/templates/main/html/base.html
+++ b/main/templates/main/html/base.html
@@ -17,36 +17,60 @@
     {% endblock %}
 </head>
 <body>
-    <header class="header">
-        <a class="logo" href="/">
-            <img src="../static/source/common/logo.png" alt="Логотип">
+<header class="header">
+    <a class="logo" href="/">
+        <img src="{% static logo_image %}" alt="Логотип">
+    </a>
+
+    <button class="menu-toggle">
+        <svg width="50px" height="50px" viewBox="0 -4.5 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink">
+
+            <title>arrow_down [#338]</title>
+            <desc>Created with Sketch.</desc>
+            <defs>
+
+            </defs>
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g id="Dribbble-Light-Preview" transform="translate(-220.000000, -6684.000000)" fill="#FFFFFF">
+                    <g id="icons" transform="translate(56.000000, 160.000000)">
+                        <path d="M164.292308,6524.36583 L164.292308,6524.36583 C163.902564,6524.77071 163.902564,6525.42619 164.292308,6525.83004 L172.555873,6534.39267 C173.33636,6535.20244 174.602528,6535.20244 175.383014,6534.39267 L183.70754,6525.76791 C184.093286,6525.36716 184.098283,6524.71997 183.717533,6524.31405 C183.328789,6523.89985 182.68821,6523.89467 182.29347,6524.30266 L174.676479,6532.19636 C174.285736,6532.60124 173.653152,6532.60124 173.262409,6532.19636 L165.705379,6524.36583 C165.315635,6523.96094 164.683051,6523.96094 164.292308,6524.36583"
+                              id="arrow_down-[#338]">
+
+                        </path>
+                    </g>
+                </g>
+            </g>
+        </svg>
+    </button>
+
+    <ul class="buttons-list">
+        <a href="" class="about_link">
+            <li>О НАС</li>
         </a>
+        <a href="" class="services_link">
+            <li>УСЛУГИ</li>
+        </a>
+        <a href="" class="team_link">
+            <li>КОМАНДА</li>
+        </a>
+        <a href="/portfolio" class="portfolio_link">
+            <li>ПОРТФОЛИО</li>
+        </a>
+        <a href="/faq" class="faq_link">
+            <li>FAQs</li>
+        </a>
+    </ul>
+</header>
 
-        <ul class="buttons-list">
-            <a href="" class="about_link">
-                <li>О НАС</li>
-            </a>
-            <a href="" class="services_link">
-                <li>УСЛУГИ</li>
-            </a>
-            <a href="" class="team_link">
-                <li>КОМАНДА</li>
-            </a>
-            <a href="/portfolio" class="portfolio_link">
-                <li>ПОРТФОЛИО</li>
-            </a>
-            <a href="/faq" class="faq_link">
-                <li>FAQs</li>
-            </a>
-        </ul>
-    </header>
+<main class="main">
+    {% block content %} {% endblock %}
+</main>
 
-    <main class="main">
-        {% block content %} {% endblock %}
-    </main>
+<footer class="footer">
+    {% block footer %} {% endblock %}
+</footer>
 
-    <footer class="footer">
-        {% block footer %} {% endblock %}
-    </footer>
+<script src="static/js/base.js"></script>
 </body>
 </html>
