--- a/main/static/styles/base.css
+++ b/main/static/styles/base.css
@@ -133,23 +133,30 @@ header {
 }
 @media (min-width: 980px) and (max-width: 1199px) {
   .logo img {
-    width: 150px;
+    width: 210px;
   }
 }
 @media (min-width: 769px) and (max-width: 979px) {
   .logo img {
-    width: 150px;
+    width: 210px;
   }
 }
 @media (min-width: 640px) and (max-width: 768px) {
   .logo img {
-    width: 150px;
+    width: 210px;
   }
 }
 @media (max-width: 639px) {
   .logo img {
     width: 150px;
   }
+}
+.menu-toggle {
+  color: #FFFFFF;
+  background: transparent;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 24px;
+  padding: 25px;
 }
 .buttons-list {
   list-style-type: none;
@@ -170,7 +177,12 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 25px 0;
+    justify-content: center;
+    visibility: hidden;
+    min-height: 0;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
 @media (min-width: 769px) and (max-width: 979px) {
@@ -178,7 +190,12 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 25px 0;
+    justify-content: center;
+    visibility: hidden;
+    min-height: 0;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
 @media (min-width: 640px) and (max-width: 768px) {
@@ -186,7 +203,12 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 25px 0;
+    justify-content: center;
+    visibility: hidden;
+    min-height: 0;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
 @media (max-width: 639px) {
@@ -194,7 +216,48 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 25px 0;
+    justify-content: center;
+    visibility: hidden;
+    min-height: 0;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
+  }
+}
+.buttons-list.show {
+  visibility: visible;
+  min-height: 100%;
+  max-height: 1000px;
+  opacity: 1;
+  margin-bottom: 25px;
+}
+@media (min-width: 1200px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+@media (min-width: 980px) and (max-width: 1199px) {
+  .menu-toggle {
+    display: block;
+    transition: transform 0.5s ease;
+  }
+}
+@media (min-width: 769px) and (max-width: 979px) {
+  .menu-toggle {
+    display: block;
+    transition: transform 0.5s ease;
+  }
+}
+@media (min-width: 640px) and (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+    transition: transform 0.5s ease;
+  }
+}
+@media (max-width: 639px) {
+  .menu-toggle {
+    display: block;
+    transition: transform 0.5s ease;
   }
 }
 @media (min-width: 1200px) {
