--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -108,22 +108,22 @@ header {
 }
 @media (min-width: 980px) and (max-width: 1199px) {
   .logo {
-    margin: 25px 0;
+    margin-top: 25px;
   }
 }
 @media (min-width: 769px) and (max-width: 979px) {
   .logo {
-    margin: 25px 0;
+    margin-top: 25px;
   }
 }
 @media (min-width: 640px) and (max-width: 768px) {
   .logo {
-    margin: 25px 0;
+    margin-top: 25px;
   }
 }
 @media (max-width: 639px) {
   .logo {
-    margin: 25px 0;
+    margin-top: 25px;
   }
 }
 @media (min-width: 1200px) {
@@ -151,12 +151,18 @@ header {
     width: 150px;
   }
 }
+.menu-toggle {
+  color: #FFFFFF;
+  background: transparent;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 24px;
+  padding: 25px;
+}
 .buttons-list {
   list-style-type: none;
   color: #FFFFFF;
   font-family: 'Ubuntu', sans-serif;
   font-size: 20px;
-  display: flex;
 }
 @media (min-width: 1200px) {
   .buttons-list {
@@ -168,49 +174,91 @@ header {
 }
 @media (min-width: 980px) and (max-width: 1199px) {
   .buttons-list {
-    min-height: 0;
-    max-height: 0;
+    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     visibility: hidden;
-    transition: max-height 0.5s ease, visibility 0.5s ease;
+    min-height: 0;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
 @media (min-width: 769px) and (max-width: 979px) {
   .buttons-list {
-    min-height: 0;
-    max-height: 0;
+    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     visibility: hidden;
-    transition: max-height 0.5s ease, visibility 0.5s ease;
+    min-height: 0;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
 @media (min-width: 640px) and (max-width: 768px) {
   .buttons-list {
-    min-height: 0;
-    max-height: 0;
+    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     visibility: hidden;
-    transition: max-height 0.5s ease, visibility 0.5s ease;
+    min-height: 0;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
 @media (max-width: 639px) {
   .buttons-list {
-    min-height: 0;
-    max-height: 0;
+    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     visibility: hidden;
-    transition: max-height 0.5s ease, visibility 0.5s ease;
+    min-height: 0;
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
 .buttons-list.show {
+  visibility: visible;
   min-height: 100%;
   max-height: 1000px;
-  visibility: visible;
+  opacity: 1;
   margin-bottom: 25px;
+}
+@media (min-width: 1200px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+@media (min-width: 980px) and (max-width: 1199px) {
+  .menu-toggle {
+    display: block;
+    transition: transform 0.5s ease;
+  }
+}
+@media (min-width: 769px) and (max-width: 979px) {
+  .menu-toggle {
+    display: block;
+    transition: transform 0.5s ease;
+  }
+}
+@media (min-width: 640px) and (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+    transition: transform 0.5s ease;
+  }
+}
+@media (max-width: 639px) {
+  .menu-toggle {
+    display: block;
+    transition: transform 0.5s ease;
+  }
 }
 @media (min-width: 1200px) {
   .buttons-list a:not(:first-child) {
