--- a/main/static/styles/base.less
+++ b/main/static/styles/base.less
@@ -176,15 +176,15 @@ header {
   }
 
   @media @mediumDesktopsMin and @mediumDesktopsMax {
-    width: @logoLargeWidth;
+    width: @logoSmallWidth;
   }
 
   @media @smallDesktopsMin and @smallDesktopsMax {
-    width: @logoLargeWidth;
+    width: @logoSmallWidth;
   }
 
   @media @landscapePhonesMin and @landscapePhonesMax {
-    width: @logoLargeWidth;
+    width: @logoSmallWidth;
   }
 
   @media @landscapePhonesSmaller {
