header font size fix 2.0

--- a/main/static/styles/base.css
+++ b/main/static/styles/base.css
@@ -180,6 +180,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -193,6 +194,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -206,6 +208,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -219,6 +222,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     visibility: hidden;
     min-height: 0;
     max-height: 0;
