--- a/main/static/styles/base.less
+++ b/main/static/styles/base.less
@@ -222,6 +222,8 @@ header {
     align-items: center;
     justify-content: center;
 
+    font-size: 30px;
+
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -235,6 +237,8 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    font-size: 30px;
 
     visibility: hidden;
     min-height: 0;
@@ -250,6 +254,8 @@ header {
     align-items: center;
     justify-content: center;
 
+    font-size: 30px;
+
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -263,6 +269,8 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    font-size: 30px;
 
     visibility: hidden;
     min-height: 0;
